[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Rock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ship.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/beat1.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/beat2.wav" type="AudioStream" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 800, 0, 0, 0, 0, 0, 800, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Rock = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Ship" parent="." instance=ExtResource( 3 )]

[node name="RockPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="RockSpawn" type="PathFollow2D" parent="RockPath"]

[node name="Rocks" type="Node" parent="."]

[node name="HeartBeat1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="HeartBeat2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HeartbeatTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true
[connection signal="shoot" from="Ship" to="." method="_on_Ship_shoot"]
[connection signal="timeout" from="HeartbeatTimer" to="." method="_on_HeartbeatTimer_timeout"]
